# IoT-manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  tests_pre_start.py
app/alembic/: env.py
app/alembic/versions/: 1ebced84321d_create_user_and_device_tables.py  2f0d3934c87b_add_sensor_tables.py
app/api/: deps.py  main.py
app/api/exceptions/: device.py  sensor.py  server.py  user.py
app/api/routes/: devices.py  login.py  sensors.py  users.py  utils.py
app/core/: config.py  db.py  redis.py  security.py
app/crud/: devices.py  sensor_data.py  sensors.py  users.py
app/mappers/: device.py  sensor.py  sensor_data.py  user.py
app/models/: __init__.py  device.py  sensor.py  sensor_data.py  user.py
app/models/domain/: device.py  sensor.py  sensor_data.py  user.py
app/models/persistence/: device.py  sensor.py  sensor_data.py  user.py
app/schemas/: device.py  sensor.py  sensor_data.py  user.py
app/services/: auth.py  devices.py  sensor.py  user.py
app/tasks/: main.py  utils.py
scripts/: test.sh  tests-start.sh
tests/: conftest.py
tests/core/: test_config.py
tests/crud/: test_user.py
