[project]
name = "iot-manager"
version = "0.1.0"
description = "Remote control of IoT devices"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "celery>=5.5.3",
    "fastapi>=0.117.1",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "redis>=6.4.0",
    "uvicorn>=0.37.0",
]


[tool.ruff]
line-length = 88
