[project]
name = "iot-manager"
version = "0.1.0"
description = "Remote control of IoT devices"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "bcrypt<4.1.0",
    "celery>=5.5.3",
    "email-validator>=2.3.0",
    "fastapi>=0.117.1",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.25",
    "uvicorn>=0.37.0",
]


[tool.ruff]
line-length = 88
exclude = [".venv", "venv", "alembic"]
